# PSI-bench

./: .gitignore  README.md  eval_sim.sl  ptc_batch_output.json  pyproject.toml  run_emotional_compare_all.sh  run_perplexity.sh  test_gpt41_mini.py  test_ptc_batch.py
configs/: default.yaml  gpt-oss-120b.yaml  llama-3.1-8b-instruct.yaml  llama-3.3-70b-instruct.yaml  qwen3-30b-a3b-instruct-2507.yaml  vllm.yaml
data/: mass_generate.sh  test_data_quality.py
model_interface/: README.md  __init__.py  install.sh  model_factory.py  test.py
model_interface/model_provider/: __init__.py
model_interface/server/: bash_launch.sh
psibench/: generate_conversations.py  generate_next_turn copy.py  generate_next_turn.py
psibench/agents/: base.py  judge.py  patient.py  therapist.py
psibench/data_loader/: __init__.py  esc.py  main_loader.py  push_hf.py  utils.py
psibench/eval/: Disfluency_LinguisticMarker_Analysis.ipynb  README_lexical_diversity.md  README_ptc.md  compare_conversation_lengths.py  depressive_linguistic_markers.py  emotional_compare.py  emtional_compare.py  lexical_diversity_strict.py  message_lengths.py  perplexity.py  ptc_classification.py  read_compare_convo.py  situation_convo_similarity.py  utils.py
psibench/models/: README.md  eeyore.py  generation_template.py  patient_psi.py  roleplay_doh.py
psibench/prompts/: __init__.py  judge_prompt.py  patient_prompt.py  therapist_prompt.py
psibench/utils/: llm_backend.py
vllm_serve/: README.md  launch.sh  test_gpt-oss.py  test_llama31_8b_instruct.py  test_qwen3_instruct.py  test_qwen3_reasoning.py
(+30 files in other folders)
